[gd_scene load_steps=8 format=2]

[ext_resource path="res://World/furniture/obiekty/palnik.png" type="Texture" id=1]
[ext_resource path="res://World/furniture/obiekty/piekarnik1.png" type="Texture" id=2]
[ext_resource path="res://World/furniture/obiekty/Gotowanie.gd" type="Script" id=3]
[ext_resource path="res://World/furniture/Slot/item_slot_default.png" type="Texture" id=4]
[ext_resource path="res://World/Item/garnek1.png" type="Texture" id=5]
[ext_resource path="res://World/furniture/Slot/Slot.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxTexture" id=3]
content_margin_left = 0.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 18, 18 )
margin_left = 6.0
margin_right = 5.0
margin_top = 482.25
modulate_color = Color( 0.376471, 0.905882, 0.960784, 0.509804 )

[node name="Gotowanie" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -872.0
margin_top = -30.0
margin_right = -872.0
margin_bottom = -30.0
script = ExtResource( 3 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Node2D"]
position = Vector2( 421, 366 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="palnik" type="Sprite" parent="Node2D"]
position = Vector2( 404, 235 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="Node2D"]
wait_time = 0.2

[node name="garnek" type="Sprite" parent="Node2D"]
position = Vector2( 387, 173 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="Slot24" parent="." instance=ExtResource( 6 )]
margin_left = 322.0
margin_top = 55.0
margin_right = 392.0
margin_bottom = 125.0
rect_scale = Vector2( 2, 2 )
custom_styles/panel = SubResource( 3 )

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 245.0
margin_top = 352.0
margin_right = 269.0
margin_bottom = 376.0
rect_scale = Vector2( 3, 3 )

[connection signal="timeout" from="Node2D/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="CheckBox" to="." method="_on_CheckBox_pressed"]
